--- a/app/Resources/views/city/index.html.twig
+++ b/app/Resources/views/city/index.html.twig
@@ -8,6 +8,7 @@
             <tr>
                 <th>Name</th>
                 <th>State</th>
+                <th>Country</th>
             </tr>
         </thead>
         <tbody>
@@ -15,6 +16,7 @@
             <tr>
                 <td>{{ city.name }}</td>
                 <td>{% if city.state %}{{ city.state.name }}{% endif %}</td>
+                <td>{% if city.state.country %}{{ city.state.country.name }}{% endif %}</td>
                 <td>
                     <ul>
                         <li>
