--- a/app/Resources/views/track/index.html.twig
+++ b/app/Resources/views/track/index.html.twig
@@ -7,13 +7,20 @@
         <thead>
             <tr>
                 <th>Number</th>
-                <th>Actions</th>
+                <th>Song(s)</th>
             </tr>
         </thead>
         <tbody>
         {% for track in tracks %}
             <tr>
                 <td>{{ track.number }}</td>
+                <td>{% if track.songs %}
+                    <ul>
+                        {% for song in track.songs %}
+                            <li>{{ song.name }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}</td>
                 <td>
                     <ul>
                         <li>
