Frontend Controllers added | Views under construction

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,7 +13,7 @@
     <body>
         <div>
 
-            <img id="banner" src="{{ asset('images/banner_minerva.jpg') }}" />
+            <img id="banner" src="{{ asset('images/banner_minerva.png') }}" />
 
         </div>
 
