--- a/web/css/hub.css
+++ b/web/css/hub.css
@@ -9,11 +9,13 @@ body {
 #banner {
 
     display: flex;
-    justify-content: center;
-    top: 5px;
-    width: 90%;
-    height: 50%;
+    width: 95%;
+    height: 125px;
     border-radius: 1%;
+    margin-top: 5px;
+    margin-left: auto; 
+    margin-right: auto; 
+    text-align: center;
     /* you need to match the shadow color to your background or image border for the desired effect*/
     box-shadow: 0 0 8px 8px black inset;
 
