More Controllers reworked in the FrontendBundle | Index views made

--- a/src/FrontendBundle/Resources/views/Band/index.html.twig
+++ b/src/FrontendBundle/Resources/views/Band/index.html.twig
@@ -1,6 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+
+<center>
+
     <h1>Band(s) currently added</h1>
 
     <table class="table">
@@ -39,4 +42,7 @@
         {% endfor %}
         </tbody>
     </table>
+
+    </center>
+
 {% endblock %}
