--- a/src/FrontendBundle/Resources/views/Album/index.html.twig
+++ b/src/FrontendBundle/Resources/views/Album/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+<center>
     <h1>Album(s) curently added</h1>
 
     <table class="table">
@@ -23,4 +24,5 @@
         {% endfor %}
         </tbody>
     </table>
+</center>
 {% endblock %}
