--- a/src/FrontendBundle/Resources/views/Book/index.html.twig
+++ b/src/FrontendBundle/Resources/views/Book/index.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <center>
+
     <h1>Books list</h1>
 
     <table class="table">
@@ -23,5 +25,8 @@
         {% endfor %}
         </tbody>
     </table>
+
+    </center>
+
 
 {% endblock %}
