--- a/src/FrontendBundle/Resources/views/City/index.html.twig
+++ b/src/FrontendBundle/Resources/views/City/index.html.twig
@@ -18,6 +18,13 @@
                     <td>{{ city.name }}</td>
                     <td>{% if city.state %}{{ city.state.name }}{% endif %}</td>
                     <td>{% if city.state.country %}{{ city.state.country.name }}{% endif %}</td>
+                    <td>
+                        <ul>
+                            <li>
+                                <a href="{{ path('city_detail', { 'id': city.id }) }}">More informations</a>
+                            </li>
+                        </ul>
+                    </td>
                 </tr>
             {% endfor %}
             </tbody>
