Frontend finished | Adding Random Method

--- a/src/FrontendBundle/Resources/views/Movie/hub.html.twig
+++ b/src/FrontendBundle/Resources/views/Movie/hub.html.twig
@@ -3,7 +3,9 @@
 {% block body %}
 <center>
 
-    <h1>Movies list</h1>
+    </br>
+    </br>
+    <p>Here are some random articles that you might find interesting !</p>
 
     <table class="table">
         <thead>
@@ -20,7 +22,7 @@
                 <td>
                     <ul>
                         <li>
-                            <a href="{{ path('movie_detail', { 'id': movie.id }) }}">More informations</a>
+                            <a href="{{ path('movie_detail', { 'id': movie.id }) }}">Take a look !</a>
                         </li>
                     </ul>
                 </td>
